update for DataSliceQueryUI feature